<resources>
    <string name="app_name" translatable="false">Waifu Camera</string>
    <string name="title_home">主页</string>
    <string name="title_photograph">拍摄</string>
    <string name="title_notifications">设置</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="addLibAndSelectRequst">请至少添加一个立绘文件夹并选择一项立绘</string>
    <string name="addLibRequst">请至少添加一个立绘文件夹</string>
    <string name="fullScreenButton">全屏</string>
    <string name="savePhotoFailed">照片保存失败</string>
    <string name="picture">照片</string>
    <string name="hasSaved">已保存</string>
    <string name="add">添加</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="name">名称</string>
    <string name="path">路径</string>
    <string name="delete">删除</string>
    <string name="confirmDelete">你确认要删除下列文件夹吗</string>
    <string name="restore">恢复</string>
    <string name="confirmRestore">你确定要恢复初始设置内容吗</string>
    <string name="shot">拍摄</string>
    <string name="switchCamera">切换相机</string>
    <string name="fgimageLib">立绘库</string>
    <string name="singleSettings">单项设置</string>
    <string name="save">保存</string>
    <string name="title_table">桌面</string>
    <string name="favor">收藏夹</string>
    <string name="confirmDeleteFavor">你确定要删掉这个收藏吗</string>
    <string name="menuDialogHeadline">你想要对这一项做什么</string>
    <string name="edit">编辑</string>
    <string name="toFirst">提到最前</string>
    <string name="toLast">放到最后</string>
    <string name="favorItem">收藏</string>
    <string name="addedToFavor">已添加至收藏夹</string>
    <string name="existInFavor">该项已经存在于收藏夹中</string>
    <string name="toggle">切换</string>
    <string name="fileNotFound">文件未找到</string>
    <string name="selectFile">选择</string>
    <string name="guide">使用说明</string>
    <string name="about">关于</string>
    <string name="switchFlash">闪光灯</string>
</resources>