<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.shiroha.waifucamera.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_photograph"
        android:name="com.shiroha.waifucamera.ui.photograph.PhotographFragment"
        android:label="@string/title_photograph"
        tools:layout="@layout/fragment_photograph" />

    <fragment
        android:id="@+id/navigation_table"
        android:name="com.shiroha.waifucamera.ui.TableFragment"
        android:label="@string/title_table"
        tools:layout="@layout/fragment_table" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.shiroha.waifucamera.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>