<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:id="@+id/aboutLayer"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonGuide"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16dp"
            android:text="@string/guide" />
        <Button
            android:id="@+id/buttonAbout"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16dp"
            android:text="@string/about" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/textTip0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40px"
        android:paddingRight="20px"
        app:layout_constraintTop_toBottomOf="@+id/aboutLayer">
        <TextView
            android:id="@+id/text0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fgimageLib"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addButton"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0px"
            android:text="@string/add"

            android:textSize="15dp"
            app:layout_constraintRight_toRightOf="parent" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxHeight="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTip0">
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scrollbars="vertical"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/textTip1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="40px"
        android:paddingRight="20px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame1">
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favor"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addButton2"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0px"
            android:text="@string/add"
            android:textSize="15dp"
            app:layout_constraintRight_toRightOf="parent" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="600px"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTip1"
        android:background="@color/cardview_dark_background"/>

</androidx.constraintlayout.widget.ConstraintLayout>